add export hatch

--- a/src/main/resources/assets/modularbees/lang/en_us.json
+++ b/src/main/resources/assets/modularbees/lang/en_us.json
@@ -6,6 +6,7 @@
   "block.modularbees.modular_beehive_feeder": "Modular Feeder",
   "block.modularbees.modular_beehive_overclocker": "Beehive Overclocker",
   "block.modularbees.modular_treater": "Beehive Treater",
+  "block.modularbees.modular_export": "Beehive Export Hatch",
   "item.modularbees.electride_copper": "Copper Electride",
   "item.modularbees.electride_iron": "Iron Electride",
   "item.modularbees.electride_gold": "Gold Electride",
