--- a/src/main/resources/assets/modularbees/lang/en_us.json
+++ b/src/main/resources/assets/modularbees/lang/en_us.json
@@ -7,11 +7,13 @@
   "block.modularbees.modular_beehive_overclocker": "Beehive Overclocker",
   "block.modularbees.modular_treater": "Beehive Treater",
   "block.modularbees.modular_export": "Beehive Export Hatch",
+  "block.modularbees.scented_plank": "Scented Plank",
   "item.modularbees.electride_copper": "Copper Electride",
   "item.modularbees.electride_iron": "Iron Electride",
   "item.modularbees.electride_gold": "Gold Electride",
   "item.modularbees.electride_netherite": "Netherite Electride",
   "modularbees.tooltip.electride_power": "Gives extra %s%% speed boost",
+  "modularbees.chat.beehive_unformed": "Modular Beehive is unformed yet",
   "modularbees.gui.modular_beehive_overclocker.boost": "Speed Boost:",
   "modularbees.gui.modular_beehive_overclocker.empty": "No Electrode",
   "modularbees.gui.fluid_tank.amount": "%s/%s mB",
