add dragon breath

--- a/src/main/resources/assets/modularbees/lang/en_us.json
+++ b/src/main/resources/assets/modularbees/lang/en_us.json
@@ -8,10 +8,13 @@
   "block.modularbees.modular_treater": "Beehive Treater",
   "block.modularbees.modular_export": "Beehive Export Hatch",
   "block.modularbees.scented_plank": "Scented Plank",
+  "block.modularbees.dragon_breath": "Dragon Breath",
   "item.modularbees.electrode_copper": "Copper Electrode",
   "item.modularbees.electrode_iron": "Iron Electrode",
   "item.modularbees.electrode_gold": "Gold Electrode",
   "item.modularbees.electrode_netherite": "Netherite Electrode",
+  "item.modularbees.dragon_breath_bucket": "Dragon Breath Bucket",
+  "fluid_type.modularbees.dragon_breath": "Dragon Breath",
   "modularbees.tooltip.electrode_power": "Gives x%s speed boost",
   "modularbees.chat.beehive_unformed": "Modular Beehive is unformed yet",
   "modularbees.gui.modular_beehive_overclocker.boost": "Speed Boost:",
