add dragon hive

--- a/src/main/resources/assets/modularbees/lang/en_us.json
+++ b/src/main/resources/assets/modularbees/lang/en_us.json
@@ -7,6 +7,7 @@
   "block.modularbees.modular_beehive_overclocker": "Beehive Overclocker",
   "block.modularbees.modular_treater": "Beehive Treater",
   "block.modularbees.modular_export": "Beehive Export Hatch",
+  "block.modularbees.modular_dragon_hive": "Modular Dragon Hive",
   "block.modularbees.scented_plank": "Scented Plank",
   "block.modularbees.dragon_breath": "Dragon Breath",
   "item.modularbees.electrode_copper": "Copper Electrode",
