make electrode data pack

--- a/src/main/resources/assets/modularbees/lang/en_us.json
+++ b/src/main/resources/assets/modularbees/lang/en_us.json
@@ -26,5 +26,6 @@
   "modularbees.gui.modular_beehive_alveary.invalid": "The bee data is corrupted.",
   "modularbees.gui.modular_beehive_alveary.solitary": "Solitary bee can't live in hive.",
   "modularbees.gui.modular_beehive_alveary.child": "Child bee can't live in alveary.",
-  "modularbees.jei.treater_boost": "Productivity +%s"
+  "modularbees.jei.treater_boost": "Productivity +%s",
+  "modularbees.jei.overclocker_boost": "Speed x%s"
 }
