refactor for centrifuge

--- a/src/main/resources/assets/modularbees/lang/en_us.json
+++ b/src/main/resources/assets/modularbees/lang/en_us.json
@@ -10,6 +10,8 @@
   "block.modularbees.modular_dragon_hive": "Modular Dragon Hive",
   "block.modularbees.scented_plank": "Scented Plank",
   "block.modularbees.dragon_breath": "Dragon Breath",
+  "block.modularbees.modular_centrifuge_core": "Modular Centrifuge",
+  "block.modularbees.modular_centrifuge_part": "Centrifuge Structure Wall",
   "item.modularbees.electrode_copper": "Copper Electrode",
   "item.modularbees.electrode_iron": "Iron Electrode",
   "item.modularbees.electrode_gold": "Gold Electrode",
@@ -18,6 +20,7 @@
   "fluid_type.modularbees.dragon_breath": "Dragon Breath",
   "modularbees.tooltip.electrode_power": "Gives x%s speed boost",
   "modularbees.chat.beehive_unformed": "Modular Beehive is unformed yet",
+  "modularbees.chat.centrifuge_unformed": "Modular Centrifuge is unformed yet",
   "modularbees.gui.modular_beehive_overclocker.boost": "Speed Boost:",
   "modularbees.gui.modular_beehive_overclocker.empty": "No Electrode",
   "modularbees.gui.fluid_tank.amount": "%s/%s mB",
