--- a/src/main/resources/assets/modularbees/lang/en_us.json
+++ b/src/main/resources/assets/modularbees/lang/en_us.json
@@ -21,6 +21,7 @@
   "item.modularbees.electrode_gold": "Gold Electrode",
   "item.modularbees.electrode_netherite": "Netherite Electrode",
   "item.modularbees.dragon_breath_bucket": "Dragon Breath Bucket",
+  "item.modularbees.honey_jelly": "Honey Jelly",
   "fluid_type.modularbees.dragon_breath": "Dragon Breath",
   "modularbees.tooltip.electrode_power": "Gives x%s speed boost",
   "modularbees.chat.beehive_unformed": "Modular Beehive is unformed yet",
