--- a/src/main/resources/assets/modularbees/lang/en_us.json
+++ b/src/main/resources/assets/modularbees/lang/en_us.json
@@ -22,6 +22,7 @@
   "item.modularbees.electrode_netherite": "Netherite Electrode",
   "item.modularbees.dragon_breath_bucket": "Dragon Breath Bucket",
   "item.modularbees.honey_jelly": "Honey Jelly",
+  "item.modularbees.royal_treat": "Royal Treat",
   "fluid_type.modularbees.dragon_breath": "Dragon Breath",
   "modularbees.tooltip.electrode_power": "Gives x%s speed boost",
   "modularbees.chat.beehive_unformed": "Modular Beehive is unformed yet",
