--- a/src/main/resources/assets/modularbees/lang/en_us.json
+++ b/src/main/resources/assets/modularbees/lang/en_us.json
@@ -16,6 +16,7 @@
   "block.modularbees.modular_centrifuge_export": "Centrifuge Export Hatch",
   "block.modularbees.modular_centrifuge_import": "Centrifuge Import Hatch",
   "block.modularbees.modular_centrifuge_heater": "Centrifuge Heater",
+  "block.modularbees.modular_centrifuge_gearbox": "Centrifuge Gearbox",
   "item.modularbees.electrode_copper": "Copper Electrode",
   "item.modularbees.electrode_iron": "Iron Electrode",
   "item.modularbees.electrode_gold": "Gold Electrode",
@@ -33,6 +34,7 @@
   "modularbees.gui.modular_beehive_overclocker.empty": "No Electrode",
   "modularbees.gui.fluid_tank.amount": "%s/%s mB",
   "modularbees.gui.energy_bar.amount": "FE: %s/%s",
+  "modularbees.gui.wax.amount": "Wax: %s/%s",
   "modularbees.gui.empty": "Empty",
   "modularbees.gui.modular_beehive_alveary.invalid": "The bee data is corrupted.",
   "modularbees.gui.modular_beehive_alveary.solitary": "Solitary bee can't live in hive.",
