--- a/src/main/resources/assets/modularbees/lang/zh_cn.json
+++ b/src/main/resources/assets/modularbees/lang/zh_cn.json
@@ -16,11 +16,16 @@
   "block.modularbees.modular_centrifuge_export": "离心机输出舱",
   "block.modularbees.modular_centrifuge_import": "离心机输入舱",
   "block.modularbees.modular_centrifuge_heater": "离心机加热器",
+  "block.modularbees.modular_centrifuge_gearbox": "离心机齿轮箱",
   "item.modularbees.electrode_copper": "铜电极",
   "item.modularbees.electrode_iron": "铁电极",
   "item.modularbees.electrode_gold": "金电极",
   "item.modularbees.electrode_netherite": "下界合金电极",
   "item.modularbees.dragon_breath_bucket": "龙息桶",
+  "item.modularbees.honey_jelly": "蜂蜜果冻",
+  "item.modularbees.royal_treat": "皇家零食",
+  "item.modularbees.ender_treat": "末影零食",
+  "item.modularbees.soul_treat": "灵魂零食",
   "fluid_type.modularbees.dragon_breath": "龙息",
   "modularbees.tooltip.electrode_power": "速度提升 x%s",
   "modularbees.chat.beehive_unformed": "模块化蜂箱尚未成形",
@@ -29,6 +34,7 @@
   "modularbees.gui.modular_beehive_overclocker.empty": "无电极",
   "modularbees.gui.fluid_tank.amount": "%s/%s mB",
   "modularbees.gui.energy_bar.amount": "FE: %s/%s",
+  "modularbees.gui.wax.amount": "蜡：%s/%s",
   "modularbees.gui.empty": "空",
   "modularbees.gui.modular_beehive_alveary.invalid": "蜜蜂数据已损坏。",
   "modularbees.gui.modular_beehive_alveary.solitary": "独居蜂不能在蜂房中生活。",
