Modify the Simplified Chinese localization of the treater

--- a/src/main/resources/assets/modularbees/lang/zh_cn.json
+++ b/src/main/resources/assets/modularbees/lang/zh_cn.json
@@ -5,7 +5,7 @@
   "block.modularbees.modular_beehive_alveary": "模块化蜂房",
   "block.modularbees.modular_beehive_feeder": "模块化喂食器",
   "block.modularbees.modular_beehive_overclocker": "蜂箱超频器",
-  "block.modularbees.modular_treater": "蜂箱处理器",
+  "block.modularbees.modular_treater": "蜂箱增产器",
   "block.modularbees.modular_export": "蜂箱输出舱",
   "block.modularbees.modular_dragon_hive": "模块化龙巢",
   "block.modularbees.scented_plank": "香薰木板",
