--- a/src/main/resources/assets/modularbees/lang/en_us.json
+++ b/src/main/resources/assets/modularbees/lang/en_us.json
@@ -8,6 +8,7 @@
   "block.modularbees.modular_treater": "Beehive Treater",
   "block.modularbees.modular_export": "Beehive Export Hatch",
   "block.modularbees.modular_dragon_hive": "Modular Dragon Hive",
+  "block.modularbees.modular_beehive_stacker": "Beehive Stacker",
   "block.modularbees.scented_plank": "Scented Plank",
   "block.modularbees.dragon_breath": "Dragon Breath",
   "block.modularbees.modular_centrifuge_core": "Modular Centrifuge",
