Updated PT_BR localization

--- a/src/main/resources/assets/modularbees/lang/pt_br.json
+++ b/src/main/resources/assets/modularbees/lang/pt_br.json
@@ -8,6 +8,7 @@
   "block.modularbees.modular_treater": "Tratador da Colmeia",
   "block.modularbees.modular_export": "Escotilha de Exportação da Colmeia",
   "block.modularbees.modular_dragon_hive": "Colmeia Dracônica Modular",
+  "block.modularbees.modular_beehive_stacker": "Empilhador de Colmeias",
   "block.modularbees.scented_plank": "Tábua Perfumada",
   "block.modularbees.dragon_breath": "Bafo de Dragão",
   "block.modularbees.modular_centrifuge_core": "Centrífuga Modular",
@@ -17,6 +18,7 @@
   "block.modularbees.modular_centrifuge_import": "Escotilha de Importação da Centrífuga",
   "block.modularbees.modular_centrifuge_heater": "Aquecedor da Centrífuga",
   "block.modularbees.modular_centrifuge_gearbox": "Caixa de Engrenagens da Centrífuga",
+  "block.modularbees.bee_extractor": "Extrator de Abelha",
   "item.modularbees.electrode_copper": "Eletrodo de Cobre",
   "item.modularbees.electrode_iron": "Eletrodo de Ferro",
   "item.modularbees.electrode_gold": "Eletrodo de Ouro",
