add more info display when structure is invalid

--- a/src/main/resources/assets/modularbees/lang/en_us.json
+++ b/src/main/resources/assets/modularbees/lang/en_us.json
@@ -32,6 +32,9 @@
   "modularbees.tooltip.electrode_power": "Gives x%s speed boost",
   "modularbees.chat.beehive_unformed": "Modular Beehive is unformed yet",
   "modularbees.chat.centrifuge_unformed": "Modular Centrifuge is unformed yet",
+  "modularbees.chat.data_corrupted": "Controller block is corrupted, try to break and place it again",
+  "modularbees.chat.block_invalid": "Invalid block at X: %s, Y: %s, Z: %s",
+  "modularbees.chat.multiple_heater": "Found multiple heaters in the same centrifuge",
   "modularbees.gui.modular_beehive_overclocker.boost": "Speed Boost:",
   "modularbees.gui.modular_beehive_overclocker.empty": "No Electrode",
   "modularbees.gui.fluid_tank.amount": "%s/%s mB",
